# gittyup

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  rebuild.sh
conf/themes/: ClaudeCode.lua
dep/: CMakeLists.txt
dep/libvterm/: CMakeLists.txt
src/: CMakeLists.txt
src/ai/: AiReviewStore.cpp  AiReviewStore.h  AiService.cpp  AiService.h  CMakeLists.txt  CodebaseIndex.cpp  CodebaseIndex.h  EmbeddingClient.cpp  EmbeddingClient.h  FindingParser.cpp  FindingParser.h  FixApplicator.cpp  FixApplicator.h  KnowledgeBase.cpp  KnowledgeBase.h  RepoAnalyzer.cpp  RepoAnalyzer.h  TaskDispatcher.cpp  TaskDispatcher.h  VectorMath.h
src/conf/: Setting.cpp  Setting.h
src/dialogs/: CMakeLists.txt  SettingsDialog.cpp  SettingsDialog.h
src/git/: Remote.cpp
src/ui/: CMakeLists.txt  ChatPanel.cpp  ChatPanel.h  CodeReviewDialog.cpp  CodeReviewDialog.h  CommitEditor.cpp  CommitEditor.h  CommitList.cpp  DetailView.cpp  DetailView.h  DoubleTreeWidget.cpp  DoubleTreeWidget.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  RemoteCallbacks.cpp  RepoView.cpp  RepoView.h  SideBar.cpp  SpinnerButton.h  SshDialog.cpp  SshDialog.h  StatusBar.cpp  StatusBar.h  TerminalPanel.cpp  TerminalPanel.h  ToolBar.cpp  ToolBar.h
src/ui/DiffView/: HunkWidget.cpp  HunkWidget.h
